# HeatXTwin_Final

./: .gitignore  BUILD_FIXES.md  BUILD_GUIDE.md  CHANGELOG_FIXES.md  CMakeLists.txt  CODE_SYNC_SUMMARY.md  COMPLETE_FORMULA_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DISCREPANCIES_CHECK.md  DOCUMENTATION_INDEX.md  ENHANCED_DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  FINAL_CODE_ALIGNMENT.md  FIXES_REPORT.md  FLUID_ASSIGNMENT_CORRECTION.md  FORMULA_CONSTANTS_SYNC_REPORT.md  FORMULA_DERIVATION_GUIDE.md  GRAPH_COMPARISON_GUIDE.md  HEAT_EXCHANGER_FORMULAS.md  HeatXTwin_Physics_Reference.md  MINOR_REFINEMENTS_SUMMARY.md  PRESSURE_DROP_FIX.md  PROGRESS_REPORT.md  QUICK_REFERENCE.md  QUICK_START_LOCAL.md  README.md  README_SIMULATOR_REFERENCE.md  RELEASE_ALTERNATIVES.md  RELEASE_INSTRUCTIONS.md  SAMPLE_CALCULATIONS.md  SETUP_GUIDE.md  SHELL_PRESSURE_DROP_CORRECTION.md  SPEED_FEATURE.md  STATUS.md  SUCCESS.md  Simulator_SteadyState_Version.cpp  TECHNICAL_DOCUMENTATION.md  WHY_TEMPERATURE_NOT_STEADY.md  WHY_WAVY_TEMPERATURE.md  (+6 more)
.claude/: settings.local.json
configs/: baseline.toml
releases/: README.md
src/: main.cpp
src/app/ui/: ChartWidget.cpp  ChartWidget.hpp  Diagnostics.cpp  Diagnostics.hpp  FoulingMapDialog.cpp  FoulingMapDialog.hpp  HeatExchanger3DWidget.cpp  HeatExchanger3DWidget.hpp  HeatExchangerWidget.cpp  HeatExchangerWidget.hpp  KPIPanel.cpp  KPIPanel.hpp  MainWindow.cpp  MainWindow.hpp  MonteCarloDialog.cpp  MonteCarloDialog.hpp  RunLogDialog.cpp  RunLogDialog.hpp  SimWorker.cpp  SimWorker.hpp  SpectrumWidget.cpp  SpectrumWidget.hpp  VibrationDialog.cpp  VibrationDialog.hpp
src/core/: AutoTune.cpp  AutoTune.hpp  BellDelaware.cpp  BellDelaware.hpp  ControllerPID.cpp  ControllerPID.hpp  EstimatorRLS.cpp  EstimatorRLS.hpp  FluidLibrary.cpp  FluidLibrary.hpp  Fouling.cpp  Fouling.hpp  FoulingMap.cpp  FoulingMap.hpp  Hydraulics.cpp  Hydraulics.hpp  Model.cpp  Model.hpp  MonteCarlo.cpp  MonteCarlo.hpp  RunLog.cpp  RunLog.hpp  Scenario.cpp  Scenario.hpp  Simulator.cpp  Simulator.hpp  Thermo.cpp  Thermo.hpp  Types.hpp  Validation.cpp  Validation.hpp  VibrationCheck.cpp  VibrationCheck.hpp
src/io/: Config.cpp  Config.hpp  CsvLogger.cpp  CsvLogger.hpp
